2002-08-21  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-deps.c (_dl_map_object_deps): Revert patch from
	2002-05-28.  This cripples the scope lists necessary to search for
	symbols in dependencies which are not in the global scope.

	* include/setjmp.h (__libc_longjmp): Add declaration.

2002-08-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/_mcount.S: Fix assembler.

	* sysdeps/unix/sysv/linux/x86_64/Makefile: Generate bits/syscall.h
	with biarch support.

2002-08-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/sysdep.h (CALL_MCOUNT): Fix it.

	* sysdeps/x86_64/Makefile (sysdep_routines): Add _mcount.

	* sysdeps/x86_64/machine-gmon.h: New.
	* sysdeps/x86_64/_mcount.S: New.

2002-08-20  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (_dl_start): Pass zero to TLS_INIT_TP.  Set
	bootstrap_map.l_tls_tp_initialized to 1 if TLS_INIT_TP was called.
	(_dl_start_final): Copy l_tls_tp_initialized to GL(dl_rtld_map).
	(dl_main): If HAVE___THREAD is not defined pass l_tls_tp_initialized
	to TL_INIT_TP.  Otherwise pass 1.
	* include/link.h (struct link_map): Add l_tls_tp_initialized.
	* sysdeps/generic/libc-tls.c (__libc_setup_tls): Pass 0 to TL_INIT_TP.

2002-08-15  Jakub Jelinek  <jakub@redhat.com>

	* locale/programs/localedef.c (add_to_readlist): Error about
	circular dependencies only if the locale in question hasn't
	been finished.
	* locale/programs/linereader.c (get_string): Pass LC_CTYPE not
	CTYPE_LOCALE to load_locale.
	* locale/programs/locfile.c (locfile_read): Don't include
	unneeded but available locales in locale_mask.

	* locale/programs/locarchive.c (enlarge_archive): If quiet, don't
	print any messages about enlarging archive.

2002-08-20  Brian Youmans  <3diff@gnu.org>

	* manual/contrib.texi: Removed licenses, added acknowledgements
	for contributions by Intel, IBM, Craig Metz.
	* LICENSES: New file, contains the text of all non-FSF licenses in the
	distribution that require putting the notice in the accompanying
	documentation.