@@ -1,8 +1,17 @@
 2002-08-21  Ulrich Drepper  <drepper@redhat.com>
 
-	* elf/dl-deps.c (_dl_map_object_deps): Revert patch from
-	2002-05-28.  This cripples the scope lists necessary to search for
-	symbols in dependencies which are not in the global scope.
+	* elf/rtld.c (start_time): New global variable.  Moved from _dl_start.
+	(DONT_USE_BOOTSTRAP_MAP): Define if we can use non-exported symbols
+	before relocation.
+	(_dl_start): Don't use local bootstrap_map variable if
+	DONT_USE_BOOTSTRAP_MAP is defined.  Use GL(dl_rtld_map).  Don't
+	pass bootstrap_map to _dl_start_final in this case either.  Don't
+	pass start_time to _dl_start_final ever.
+	(_dl_start_final): Don't copy bootstrap_map of DONT_USE_BOOTSTRAP_MAP.
+
+	* elf/dl-deps.c (_dl_map_object_deps): Revert patch from 2002-05-28.
+	This cripples the scope lists necessary to search for symbols in
+	dependencies which are not in the global scope.
 
 	* include/setjmp.h (__libc_longjmp): Add declaration.
 
